<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2018 - 2025 Axel Paetzold

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- General -->
    <string name="ok">OK</string>
    <string name="cancel">Abbrechen</string>
    <string name="more">Mehr</string>
    <string name="warning">Warnung</string>
    <string name="error">Fehler</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="search">Suchen</string>
    <string name="comments">Kommentare</string>
    <string name="name">Name</string>
    <string name="right_arrow">\u2794</string>
    <string name="startup_arrow">\u27A5</string>
    <string name="tick">\u2611</string>
    <string name="empty_box">\u2610</string>

    <!-- Menu -->
    <string name="menu_database">Datenbank</string>
    <string name="action_settings">Einstellungen</string>
    <string name="menu_tourbook">Tourenbuch</string>
    <string name="menu_statistics">Statistiken</string>
    <string name="menu_region_manager">Gebiete verwalten</string>
    <string name="menu_about">Über <xliff:g id="app_name">%1$s</xliff:g></string>
    <string name="nav_header_desc">@string/app_name_long</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">@string/app_name_long</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Submenus -->
    <string name="import_tourbook">Import</string>
    <string name="export_tourbook">Export</string>
    <string name="download_all">Alle aktualisieren</string>
    <string name="delete">Löschen</string>
    <string name="edit">Bearbeiten</string>

    <!-- About view -->
    <string name="source_code_and_support">Sourcecode und Support</string>
    <string name="data_src">Datenbezugsquelle</string>
    <string name="privacy_policy">Datenschutzerklärung</string>
    <string name="license">Lizenz</string>
    <string name="software_and_licenses">Externe Software und Lizenzen</string>
    <string name="version">Version</string>
    <string name="contact">Kontakt</string>
    <string name="contact_details">Generelles Feedback und Fehler melden</string>
    <string name="contact_concern">Was ist dein Anliegen?</string>
    <string name="choose_email_app">Wähle eine Email-App.</string>

    <!-- Dialogs -->
    <string name="dialog_text_failed_regions">Aktualisierung fehlgeschlagen für</string>
    <string name="dialog_text_delete_partner">Kletterpartner löschen?</string>
    <string name="dialog_text_add_partner">Kletterpartner hinzufügen</string>
    <string name="dialog_text_change_partner">Kletterpartner ändern</string>
    <string name="dialog_question_delete">Dieses Gebiet löschen?</string>
    <string name="dialog_question_delete_ascend">Diese Begehung löschen?</string>
    <string name="dialog_loading">Lädt...</string>
    <string name="dialog_importing">Import läuft...</string>
    <string name="dialog_exporting">Export läuft...</string>
    <string name="report_error">Fehler melden</string>

    <!-- Widgets -->
    <string name="rock_search">Felsen suchen</string>
    <string name="route_search">Weg suchen</string>
    <string name="partner_search">Partner suchen</string>
    <string name="rock_relevance_filter">Bedeutung: mindestens</string>
    <string name="route_grade_filter">Schwierigkeitseinschätzung:</string>
    <string name="route_grade_filter_to">bis</string>
    <string name="route_quality_filter">Qualität: mindestens</string>
    <string name="route_protection_filter">Absicherung: mindestens</string>
    <string name="route_drying_filter">Abtrocknung: mindestens</string>
    <string name="do_not_show_anymore">Nicht mehr anzeigen</string>

    <!-- Pop-ups -->
    <string name="refresh_successful">Aktualisierung erfolgreich</string>
    <string name="region_deleted">Gebiet gelöscht</string>
    <string name="refresh_failed">Aktualisierung fehlgeschlagen\nBitte nochmal versuchen…</string>
    <string name="refresh_aborted">Aktualisierung abgebrochen</string>
    <string name="ascends_refreshed">Begehungen aktualisiert</string>
    <string name="ascend_deleted">Begehung gelöscht</string>
    <string name="hint_no_name">Kein Name eingegeben</string>
    <string name="hint_name_already_used">Name bereits vergeben</string>
    <string name="no_filter_selected">Kein Filter ausgewählt</string>
    <string name="no_internet_connection">Keine Internetverbindung</string>
    <string name="no_map_app_available">Keine Karten-App verfügbar</string>
    <string name="no_email_app_available">Keine Email-App verfügbar</string>
    <string name="corresponding_route_not_found">Zugehöriger Weg nicht gefunden.
                                                 Datenbankeintrag wurde scheinbar gelöscht.</string>
    <string name="no_comment_available">Kein Kommentar vorhanden</string>
    <string name="cannot_create_logfile">Fehler beim Erzeugen der Log-Datei</string>
    <string name="default_region_set">Standardgebiet festgelegt</string>
    <string name="default_region_reset">Standardgebiet zurückgesetzt</string>
    <string name="country_pinned">Land gepinnt</string>
    <string name="country_already_pinned">Land bereits gepinnt</string>
    <string name="country_unpinned">Land abgepinnt</string>
    <string name="country_not_yet_pinned">Land nicht gepinnt</string>
    <string name="region_manager_usage">Aktualisieren oder Löschen eines Gebiets durch Rechts- bzw. Links-Wischen</string>
    <string name="partners_activity_usage">Bearbeiten oder Löschen eines Kletterpartners durch Rechts- bzw. Links-Wischen</string>

    <!-- Data -->
    <string name="countries_and_regions">Länder und Gebiete</string>
    <string name="sector">Teilgebiet</string>
    <string name="rock">Felsen</string>
    <string name="route">Weg</string>
    <string name="style">Stil</string>
    <string name="partner">Kletterpartner</string>
    <string name="notes">Bemerkungen</string>
    <string name="first_ascend_unknown">Erstbegeher unbekannt</string>
    <string name="date_unknown">Datum unbekannt</string>
    <string name="route_quality">Wegqualität</string>
    <string name="grade">Schwierigkeit</string>
    <string name="protection">Absicherung</string>
    <string name="drying">Abtrocknung</string>
    <string name="type_of_climbing">Kletterei:</string>
    <string name="relevance">Bedeutung</string>
    <string name="nature">Charakter</string>
    <string name="rock_fully_prohibited">Achtung: Der Felsen ist komplett gesperrt.</string>
    <string name="rock_temporarily_prohibited">Achtung: Der Felsen ist zeitweise gesperrt.</string>
    <string name="rock_partly_prohibited">Achtung: Der Felsen ist teilweise gesperrt.</string>
    <string name="rock_inofficial">Achtung: Der Felsen ist nicht anerkannt.</string>
    <string name="rock_collapsed">Achtung: Der Felsen existiert nicht mehr.</string>
    <string name="route_restricted">Achtung: Der Weg ist</string>

    <!-- Statistics -->
    <string name="ascends_per_year">Begehungen pro Jahr</string>
    <string name="ascends_per_partner">Begehungen pro Kletterpartner</string>
    <string name="newly_collected_rocks_per_year">Neu gesammelte Felsen pro Jahr</string>

    <!-- Tourbook -->
    <string name="override_tourbook">Dies überschreibt das gesamte Tourenbuch.</string>
    <string name="tourbook_export_successfull">Tourenbuch erfolgreich exportiert</string>
    <string name="tourbook_import_successfull">Tourenbuch erfolgreich importiert</string>
    <string name="tourbook_import_error">Fehler beim Import</string>
    <string name="tourbook_import_timeout">Timeout beim Tourenbuch-Import</string>
    <string name="tourbook_export_error">Fehler beim Export des Tourenbuchs</string>
    <string name="tourbook_export_timeout">Timeout beim Tourenbuch-Export</string>
    <string name="export_format">Exportformat wählen</string>

    <!-- Ascend edit -->
    <string name="ascend_edit_note">Bemerkung:</string>
    <string name="ascend_edit_partner">Kletterpartner:</string>
    <string name="ascend_edit_date">Datum:</string>
    <string name="ascend_edit_style">Stil:</string>
    <string name="ascend_edit_title">Begehung bearbeiten</string>
    <string name="date_format_hint">DD.MM.YYYY</string>

    <!-- Custom settings -->
    <string name="order_tourbook_chronologically">Chronologisch ordnen</string>

    <string name="collect_rocks">Felsen sammeln</string>
    <string name="count_summits">Gipfel</string>
    <string name="count_massifs">Massive</string>
    <string name="count_boulders">Blöcke</string>
    <string name="count_caves">Höhlen</string>
    <string name="count_unofficial_rocks">Inoffizielle Felsen</string>
    <string name="count_prohibited_rocks">Gesperrte Felsen</string>
    <string name="count_collapsed_rocks">Eingestürzte/Abgetragene Felsen</string>
    <string name="count_only_leads">Nur Vorstiege</string>

    <string name="color_ascends">Markierung für bestiegene Felsen/Wege</string>
    <string name="lead">Vorstieg</string>
    <string name="follow">Nachstieg</string>
    <string name="solo">Solo</string>
    <string name="others">Sonstige</string>
    <string name="colorize_tourbook_entries">Tourenbucheinträge färben</string>

    <string name="reset_database">Auf Werkseinstellungen zurücksetzen</string>
    <string name="reset_database_confirm">Dies löscht die gesamte Datenbank, inkl. Tourenbuch.
                                          Fortfahren?</string>
    <string name="reset_database_done">Auf Werkseinstellungen zurückgesetzt</string>

    <string name="only_official_summits">Nur offizielle Gipfel</string>
    <string name="only_official_routes">Nur offizielle Wege</string>
    <string name="sort_alphabetically">Alphabetisch\nsortieren</string>

    <!-- Ascend styles -->
    <string name="my_ascends">Meine Begehungen</string>
    <string name="project">\u0020\u2117</string>
    <string name="my_projects">Meine Projekte</string>
    <string name="my_projects_with_symbol">Meine Projekte \u2117</string>
    <string name="botch">\u0020\u26A1</string>
    <string name="my_botches">Meine Säcke</string>
    <string name="my_botches_with_symbol">Meine Säcke \u26A1</string>
    <string name="watching">\u0020\u261D</string>
    <string name="undefined">unbestimmt</string>

    <!-- IMPORTANT: This list must be in sync with the code in the AboutActivity class. -->
    <string-array name="contactConcerns">
        <item>Allgemeines Anliegen</item>
        <item>@string/report_error</item>
    </string-array>

    <!-- IMPORTANT: This list must be in sync with the code in the TourbookExportFormat class. -->
    <string-array name="exportFormats">
        <item>JSON (ID-basiert für Re-Import)</item>
        <item>JSON (Namen-basiert)</item>
        <item>CSV (Namen-basiert)</item>
    </string-array>

    <!-- What's New dialog -->
    <string name="whats_new">Neuigkeiten</string>
    <string name="show_whats_new">Neuigkeiten anzeigen?</string>

</resources>
