<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2020 Axel Paetzold

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fadeScrollbars="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View style="@style/FatDivider"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_tourbook"
            android:textSize="16sp"
            android:layout_margin="10dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tourbookOrderingCheckbox"
            android:text="@string/order_tourbook_chronologically"
            android:textSize="16sp"
            android:layout_marginStart="20dp"/>

        <View style="@style/FatDivider"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collect_rocks"
            android:textSize="16sp"
            android:layout_margin="10dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/countSummitsCheckbox"
            android:text="@string/count_summits"
            android:textSize="16sp"
            android:layout_marginStart="20dp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/countMassifsCheckbox"
            android:text="@string/count_massifs"
            android:textSize="16sp"
            android:layout_marginStart="20dp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/countBouldersCheckbox"
            android:text="@string/count_boulders"
            android:textSize="16sp"
            android:layout_marginStart="20dp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/countCavesCheckbox"
            android:text="@string/count_caves"
            android:textSize="16sp"
            android:layout_marginStart="20dp"/>

        <View style="@style/ThinDivider"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/countUnofficialRocks"
            android:text="@string/count_unofficial_rocks"
            android:textSize="16sp"
            android:layout_marginStart="20dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/countProhibitedRocks"
            android:text="@string/count_prohibited_rocks"
            android:textSize="16sp"
            android:layout_marginStart="20dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/countCollapsedRocks"
            android:text="@string/count_collapsed_rocks"
            android:textSize="16sp"
            android:layout_marginStart="20dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/countOnlyLeadsCheckbox"
            android:text="@string/count_only_leads"
            android:textSize="16sp"
            android:layout_marginStart="20dp"/>

        <View style="@style/FatDivider"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_ascends"
            android:textSize="16sp"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:id="@+id/leadColorButton"
                android:text="@string/lead"
                android:textSize="16sp"
                android:onClick="changeColor"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:id="@+id/followColorButton"
                android:text="@string/follow"
                android:textSize="16sp"
                android:onClick="changeColor"/>

        </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/colorizeTourbookEntriesCheckbox"
            android:text="@string/colorize_tourbook_entries"
            android:textSize="16sp"
            android:layout_marginStart="20dp"/>

        <View style="@style/FatDivider"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/full_database_update"
            android:onClick="updateDatabase"/>

        <View style="@style/FatDivider"/>

    </LinearLayout>

</ScrollView>
