<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2019 Fabian Kantereit

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_database"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_database"/>
        <item
            android:id="@+id/nav_tourbook"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/menu_tourbook"/>
        <item
            android:id="@+id/nav_region_manager"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/menu_region_manager"/>
        <item
            android:id="@+id/nav_preferences"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/action_settings"/>
        <!-- Title is correctly set in class BaseNavigationActivity -->
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_about"/>
    </group>

</menu>
