<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2019 Fabian Kantereit

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_search">
        <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/rock_search" />
    </group>
    <group android:id="@+id/group_filter">
        <item
            android:id="@+id/action_filter_projects"
            android:icon="@drawable/ic_menu_project"
            android:title="@string/my_projects" />
        <item
            android:id="@+id/action_filter_botches"
            android:icon="@drawable/ic_menu_flash"
            android:title="@string/my_botches" />
    </group>
    <group android:id="@+id/group_update">
        <item
            android:id="@+id/action_download"
            android:icon="@drawable/ic_menu_download"
            android:title="@string/download"/>
        <item
            android:id="@+id/action_delete"
            android:icon="@drawable/ic_menu_delete"
            android:title="@string/delete" />
    </group>
</menu>
